// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormListBox With Custom Placeholder 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-10"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      This is a custom placeholder
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Disabled Option 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-14"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Errors 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-error focus:border-error focus:ring-error"
    disabled={false}
    id="headlessui-listbox-button-12"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <div
    className="mt-2"
  >
    <p
      className="text-error text-sm"
    >
      This is an error message
    </p>
    <p
      className="text-error text-sm"
    >
      This is another error message
    </p>
  </div>
</div>
`;

exports[`Storyshots Forms/FormListBox With Icons 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-black hover:text-blue border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-8"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      <span
        className="flex items-center gap-2"
      >
        <svg
          height="16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.005 0a1 1 0 0 0-1 1v11.14a1 1 0 0 0 .505.87l5.013 2.859A1 1 0 0 0 7.02 15v-2H8v-2h-.98l-.001-5.821a1 1 0 0 0-.448-.834L3.028 2H11V1a1 1 0 0 0-1-1H1.005Zm1 3.721L5.02 5.715v7.563l-3.014-1.719V3.721ZM11 3l5 5-5 5-1.41-1.41L12.17 9H8V7h4.17L9.59 4.41 11 3Z"
            fill="currentColor"
          />
        </svg>
         Second option
      </span>
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Label 1`] = `
<div
  className=" mb-2 relative"
>
  <label
    className="block mb-2 cursor-pointer transition hover:opacity-60"
    id="headlessui-listbox-label-1"
    onClick={[Function]}
  >
    Default label
  </label>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-2"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox With Selected Default 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-black hover:text-blue border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-6"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Second option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Forms/FormListBox Without Label 1`] = `
<div
  className=" mb-2 relative"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="group flex items-center content-center px-3 py-2 border bg-white pr-8 font-headline block w-full text-left relative focus:outline-none focus:ring-2 text-gray-500 border-gray-200 focus:border-purple focus:ring-green"
    disabled={false}
    id="headlessui-listbox-button-4"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="whitespace-nowrap truncate"
    >
      Bitte wähle eine Option
    </span>
    <span
      className="absolute inset-y-0 right-3 flex items-center pointer-events-none"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.293 5.293 8 13l7.707-7.707a1 1 0 0 0-1.32-1.498l-.094.084L8 10.17 1.707 3.879a1 1 0 0 0-1.32-.084l-.094.084a1 1 0 0 0-.083 1.32l.083.094Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
</div>
`;
